--- a/styles/main.css
+++ b/styles/main.css
@@ -36,6 +36,17 @@ body {
     max-width: 64rem;
 }
 
+/*
+.clearfix::before,
+.clearfix::after {
+   content: " ";
+   display: table;
+}
+
+.clearfix::after {
+   clear: both;
+}
+*/
 
 /* Medium and small screens (640px) */
 
